# nfm

./: Cargo.toml  README.md  config.example.toml  nfm-linux64
.github/workflows/: ci.yml
src/: app.rs  config.rs  main.rs  tabs.rs  theme.rs  ui.rs  utils.rs
src/editor/: mod.rs
src/file_browser/: mod.rs
